--- a/ImageServiceGUI/Views/LogsView.xaml
+++ b/ImageServiceGUI/Views/LogsView.xaml
@@ -6,7 +6,11 @@
              xmlns:local="clr-namespace:ImageServiceGUI.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+    <StackPanel Orientation="Vertical">
+        <TextBlock TextWrapping="Wrap" Text="Logs" TextAlignment="Center" Background="LightSteelBlue" FontSize="40" FontWeight="Bold" Foreground="DarkBlue"/>
+
+        <Grid>
             
-    </Grid>
+        </Grid>
+    </StackPanel>
 </UserControl>
