--- a/ImageServiceGUI/MainWindow.xaml
+++ b/ImageServiceGUI/MainWindow.xaml
@@ -4,10 +4,30 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ImageServiceGUI"
-        xmlns:views="clr-namespace:ImageServiceGUI.Views"
         mc:Ignorable="d"
+        xmlns:views="clr-namespace:ImageServiceGUI.Views"
+        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"     
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
+
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Closing">
+            <i:InvokeCommandAction Command="{Binding CloseCommand}" />
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
+
+    <Grid >
+        <Grid.Style>
+            <Style TargetType="Grid">
+
+                <Setter Property="Background" Value="White" />
+                <Style.Triggers>
+                    <DataTrigger Binding="{Binding VM_Connected}" Value="False">
+                        <Setter Property="Background" Value="Gray" />
+                    </DataTrigger>
+                </Style.Triggers>
+            </Style>
+        </Grid.Style>
+
         <TabControl HorizontalAlignment="Left" Height="321" Margin="36,33,0,0" VerticalAlignment="Top" Width="652">
             <TabItem Header="Settings">
                 <views:SettingsView/>
