added photos infrastructure (MVC). not yet connected to the main webpage...

--- a/ImageServiceWeb/Views/First/Config.cshtml
+++ b/ImageServiceWeb/Views/First/Config.cshtml
@@ -11,25 +11,25 @@
             <th>
                 @Html.DisplayNameFor(model => model.OutputDir)
             </th>
-            <td>@Model.OutputDir</td>
+            <td style="padding-left: 25px;">@Model.OutputDir</td>
         </tr>
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.SourceName)
             </th>
-            <td>@Model.SourceName</td>
+            <td style="padding-left: 25px;">@Model.SourceName</td>
         </tr>
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.LogName)
             </th>
-            <td>@Model.LogName</td>
+            <td style="padding-left: 25px;">@Model.LogName</td>
         </tr>
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.ThumbnailSize)
             </th>
-            <td>@Model.ThumbnailSize</td>
+            <td style="padding-left: 25px;">@Model.ThumbnailSize</td>
         </tr>
     </table>
 
