Added photos MVC

--- a/ImageServiceWeb/Views/Shared/_Layout.cshtml
+++ b/ImageServiceWeb/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Config", "Config", "First")</li>
                     <li>@Html.ActionLink("Logs", "Logs", "First")</li>
+                    <li>@Html.ActionLink("Photos", "Photos", "First")</li>
                 </ul>
             </div>
         </div>
