--- a/ImageServiceWeb/Views/First/Photos.cshtml
+++ b/ImageServiceWeb/Views/First/Photos.cshtml
@@ -1,7 +1,12 @@
-﻿
+﻿@model ImageServiceWeb.Models.PhotosModel
+
 @{
     ViewBag.Title = "Photos";
 }
 
 <h2>Photos</h2>
+
+@*// photoPath = item.ImageRelativePath, photoThumbnailPath = item.ImageRelativePathThumbnail*@
+
+
 
