--- a/ImageServiceWeb/Views/First/Index.cshtml
+++ b/ImageServiceWeb/Views/First/Index.cshtml
@@ -1,7 +1,54 @@
-﻿
+﻿@model ImageServiceWeb.Models.MainModel
+
 @{
     ViewBag.Title = "Index";
 }
 
 <h2>Index</h2>
+<table>
+    <tr>
+        <td>The server is:</td>
 
+        @{string answer = "";
+            var reply = Model.Connected.ToString().ToLower();
+            switch (reply)
+            {
+                case "false":
+                    answer = " not connected";
+                    break;
+                case "true":
+                    answer = " connected";
+                    break;
+            }
+        }
+        <td>@answer</td>
+    </tr>
+</table>
+<hr />
+<table>
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Students[0].First)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Students[0].Second)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Students[0].ID)
+        </th>
+    </tr>
+    @foreach (var student in Model.Students)
+    {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => student.First)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => student.Second)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => student.ID)
+        </td>
+    </tr>
+    }
+</table>
