--- a/ImageServiceWeb/Views/First/DeleteHandler.cshtml
+++ b/ImageServiceWeb/Views/First/DeleteHandler.cshtml
@@ -7,17 +7,14 @@
 <h2>DeleteHandler</h2>
 <div>Are you sure you would like to close the handler?</div>
 <button type="button" id="btnOK" style="margin:10px">OK</button>
-<button type="button" id="btnCancel" style="margin:10px">CANCEL</button>
+<button type="button" id="btnCancel" onclick="location.href='@Url.Action("Config")'" style="margin:10px">CANCEL</button>
 
 <script>
-    $("#btnOK").click(function () {
+    var btnOK = document.getElementById("btnOK");
+    btnOK.onclick = function () {
+        $(':button').prop('disabled', true);
+            location.href = '@Url.Action("OKClicked", "First")';
+    }
     
-    });
-
-    $("#btnCancel").click(function () {
-        //window.location.href = "Config";
-        window.location.href = 'Config'
-    });
-
 </script>
 
