--- a/ImageServiceWeb/Views/First/Config.cshtml
+++ b/ImageServiceWeb/Views/First/Config.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Config</h2>
 <div>
-    <table>
+    <table class="table" style="width:auto">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.OutputDir)
