--- a/ImageServiceWeb/Views/First/Logs.cshtml
+++ b/ImageServiceWeb/Views/First/Logs.cshtml
@@ -14,7 +14,7 @@
 
 <h2>Logs</h2>
 <div>
-    <table id="tableLogs">
+    <table id="tableLogs" class="table" style="width:auto">
         <tr>
             <th>Type</th>
             <th>Message</th>
